@@ -3322,6 +3322,19 @@ spell, or the spell expires, the object will remain in its default locked \
 state, but the lock will be mundane.   The lock will always be permanent if \
 the caster owns the room, or is following someone who owns the room.
 
+SPELL_WIZARD`S_MARK=SPELL_WIZARDS_MARK
+SPELL_WIZARDSMARK=SPELL_WIZARDS_MARK
+SPELL_WIZARDS_MARK=<ABILITY>\
+Usage    : CAST "WIZARDS MARK" [TARGET NAME] \n\r\
+Example  : cast "wizards mark" chest\n\r\
+When cast on an item, the item will become protected from \
+being sold, and from mysterious disappearances when left \
+on the ground for a long period.  It does not protect against \
+fire, disintegration, rotting, collection by scavengers, breaking, \
+or other natural causes.  This magic mark lasts a very very long \
+time.
+ 
+
 SPELL_WIZARDSCHEST=SPELL_WIZARDS_CHEST
 WIZARD_CHEST=SPELL_WIZARDS_CHEST
 
